--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
-</head>
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div class="master">
-        <header class="header">
-
-        </header>
-        <div class="main">
-            <section class="sectio">
-
-            </section>
-        </div>
-        <footer class="footer"></footer>
+      <header class="header">
+        <ul class="disorderList">
+          <li class="dataList"></li>
+          <li class="dataList"></li>
+          <li class="dataList"></li>
+          <li class="dataList"></li>
+        </ul>
+      </header>
+      <div class="main">
+        <section class="sectio"></section>
+      </div>
+      <footer class="footer"></footer>
     </div>
-</body>
-
+  </body>
 </html>
