creamos los estilos para el header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="master">
       <header class="header">
         <ul class="disorderList">
-          <li class="dataList"></li>
-          <li class="dataList"></li>
-          <li class="dataList"></li>
-          <li class="dataList"></li>
+          <li class="dataList">home</li>
+          <li class="dataList">Compras</li>
+          <li class="dataList">Nosotros</li>
+          <li class="dataList">Ayuda</li>
         </ul>
       </header>
       <div class="main">
